# beware

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: caveats.md  index.md
docs/sanitization/: index.md
src/beware/: __init__.py
src/beware/_unsafe/: __init__.py  _context.py  _context_vars.py  _descriptor.py
src/beware/exceptions/: __init__.py
src/beware/sanitization/: __init__.py  _context.py  _decorator.py
tests/unit/sanitization/: test_async_sanitization.py  test_context_sanitization.py  test_decorator_sanitization.py
tests/unit/unsafe/: test_attribute_assignment.py  test_attribute_delete.py  test_attribute_reference.py  test_unsafe_context.py
